kaname/tests/trybuild/null_eop_in_iau2006_full_from_utc.stderr
error[E0277]: the trait bound `NullEop: Ut1Offset` is not satisfied
  --> tests/trybuild/null_eop_in_iau2006_full_from_utc.rs:15:66
   |
15 |     let _m = Rotation::<Gcrs, Itrs>::iau2006_full_from_utc(&utc, &NullEop);
   |              ---------------------------------------------       ^^^^^^^^ the trait `Ut1Offset` is not implemented for `NullEop`
   |              |
   |              required by a bound introduced by this call
   |
note: required by a bound in `cio_chain::<impl Rotation<kaname::frame::Gcrs, kaname::frame::Itrs>>::iau2006_full_from_utc`
  --> src/earth/iau2006/cio_chain.rs
   |
   |     pub fn iau2006_full_from_utc<P>(utc: &Epoch<Utc>, eop: &P) -> Self
   |            --------------------- required by a bound in this associated function
   |     where
   |         P: Ut1Offset + NutationCorrections + PolarMotion + ?Sized,
   |            ^^^^^^^^^ required by this bound in `cio_chain::<impl Rotation<Gcrs, Itrs>>::iau2006_full_from_utc`

error[E0277]: the trait bound `NullEop: NutationCorrections` is not satisfied
  --> tests/trybuild/null_eop_in_iau2006_full_from_utc.rs:15:66
   |
15 |     let _m = Rotation::<Gcrs, Itrs>::iau2006_full_from_utc(&utc, &NullEop);
   |              ---------------------------------------------       ^^^^^^^^ the trait `NutationCorrections` is not implemented for `NullEop`
   |              |
   |              required by a bound introduced by this call
   |
note: required by a bound in `cio_chain::<impl Rotation<kaname::frame::Gcrs, kaname::frame::Itrs>>::iau2006_full_from_utc`
  --> src/earth/iau2006/cio_chain.rs
   |
   |     pub fn iau2006_full_from_utc<P>(utc: &Epoch<Utc>, eop: &P) -> Self
   |            --------------------- required by a bound in this associated function
   |     where
   |         P: Ut1Offset + NutationCorrections + PolarMotion + ?Sized,
   |                        ^^^^^^^^^^^^^^^^^^^ required by this bound in `cio_chain::<impl Rotation<Gcrs, Itrs>>::iau2006_full_from_utc`

error[E0277]: the trait bound `NullEop: PolarMotion` is not satisfied
  --> tests/trybuild/null_eop_in_iau2006_full_from_utc.rs:15:66
   |
15 |     let _m = Rotation::<Gcrs, Itrs>::iau2006_full_from_utc(&utc, &NullEop);
   |              ---------------------------------------------       ^^^^^^^^ the trait `PolarMotion` is not implemented for `NullEop`
   |              |
   |              required by a bound introduced by this call
   |
note: required by a bound in `cio_chain::<impl Rotation<kaname::frame::Gcrs, kaname::frame::Itrs>>::iau2006_full_from_utc`
  --> src/earth/iau2006/cio_chain.rs
   |
   |     pub fn iau2006_full_from_utc<P>(utc: &Epoch<Utc>, eop: &P) -> Self
   |            --------------------- required by a bound in this associated function
   |     where
   |         P: Ut1Offset + NutationCorrections + PolarMotion + ?Sized,
   |                                              ^^^^^^^^^^^ required by this bound in `cio_chain::<impl Rotation<Gcrs, Itrs>>::iau2006_full_from_utc`
